[package]
name = "pkusoftwareanalysislab2"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.13.0"
scc = "2.2.6"
sexp = "*"
spmc = "0.3.0"
z3 = {version = "0.12.1", features = ["static-link-z3"]}
z3-sys = {version = "0.8.1", features = ["static-link-z3"]}
rand = "0.8.3"
once_cell = "1.20.2"
atomic-wait = "1.1.0"
log = {version = "0.4.22", features = ["release_max_level_info"]}
env_logger = "0.11.6"

[env]
RUSTFLAGS = "-C target-cpu=native"
RUST_LOG = "info"